Business Software Dashboard Simulation/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\EBUBECHUKWU\Documents\Queen Mary\semesterb\oop\miniproject\Business Software Dashboard Simulation_v27
-d
C:\Users\EBUBECHUKWU\Documents\Queen Mary\semesterb\oop\miniproject\Business Software Dashboard Simulation_v27\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\EBUBECHUKWU\Documents\Queen Mary\semesterb\oop\miniproject\Business Software Dashboard Simulation_v27\CreditGuiFrame.java
<---- end of javadoc command ---->
Loading source file C:\Users\EBUBECHUKWU\Documents\Queen Mary\semesterb\oop\miniproject\Business Software Dashboard Simulation_v27\CreditGuiFrame.java...
C:\Users\EBUBECHUKWU\Documents\Queen Mary\semesterb\oop\miniproject\Business Software Dashboard Simulation_v27\CreditGuiFrame.java:592: error: '{' expected
            catch(NumberFormatException t)
                                          ^
C:\Users\EBUBECHUKWU\Documents\Queen Mary\semesterb\oop\miniproject\Business Software Dashboard Simulation_v27\CreditGuiFrame.java:933: error: reached end of file while parsing
}
 ^
2 errors
